Fixed door bug on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -234,10 +234,12 @@ body {
 	/*transition: width 2s;*/
 	transition:all 300ms linear;
     left: -50vw;
+    display: none;  
 }
 
 .left-door-moved {
     left:0vw!important;
+    display: block;
 }
 
 
@@ -247,8 +249,10 @@ body {
 	box-shadow: inset 4px 0px 26px #172737;
 	transition:all 300ms linear;
 	left:100vw;
+    display: none; 
 }
 
 .right-door-moved {
     left:50vw!important;
+    display: block;
 }
